<resources>
    <string name="app_name">JOOSULSA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- fragment_home.xml -->
    <string name="titHash">가장 많이 찾고 있어요</string>
    <string name="tvCheck">촬영으로 편하게 분리수거 체크!</string>
    <string name="tvRank">우리 동네 랭킹 확인하기</string>

    <string name="tvLogin">로그인이 필요합니다.</string>
    <string name="tvLogintext">로그인을 하시려면 이곳을 클릭해주세요.</string>


    <string name="titCategory">카테고리별 분리수거 방법</string>
    <string name="categoryItem01">일반쓰레기</string>
    <string name="categoryItem02">캔</string>
    <string name="categoryItem03">배달용기</string>
    <string name="categoryItem04">플라스틱</string>

    <string name="tvQuiz">오늘의 퀴즈</string>
    <string name="tvAttendance">오늘의 출석체크</string>

    <string name="titUpcycling">오늘의 업사이클링</string>


    <!-- activity_point_history.xml -->
    <string name="titPoint">포인트 조회</string>
    <string name="pointHistoryMainTitle">000님의 포인트 지갑</string>
    <string name="pointHistorySubTitle">환경을 생각하는 한 걸음!</string>

    <string name="titCountPoint">누적 포인트</string>
    <string name="CountPointUnit">POINT</string>
    <string name="idIcon"> ID |</string>

    <string name="innerTitlePoint">포인트 전체 내역</string>


    <!-- activity_search.xml -->
    <string name="fvrSearches">인기검색어</string>

    <!-- activity_search_detail.xml -->
    <string name="searchError">검색한 내용을 찾을 수 없습니다.</string>
    <string name="suggestContent">추천 컨텐츠</string>

    <!-- activity_town_rank.xml -->
    <string name="units">PT</string>


</resources>